# vaktaplan

./: MANIFEST.in  dagskipan_Beta.xlsx  fim_proto.docx  ppl.py  setup.cfg  vaktaplan.py  xl.py
vaktaplan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
