[metadata]
name = vaktaplan
version = 0.0.1
description = Work with shift plans
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/odinndagur/shift_plans_2022
author = Óðinn Dagur Bjarnason
author_email = odinnd@gmail.com
license = MIT

[options]
py_modules = vaktaplan
install_requires =
  PyPDF2~=2.0
  camelot-py>=0.10.1
  ghostscript>=0.7
  openpyxl>=3.0.9
  opencv-python
  pandas>=1.3.4
  pdf2image>=1.16.0
  pdf2img>=0.1.2
  pdfminer.six>=20211012
  pdfplumber
  python-docx
include_package_data=True

[options.entry_points]
console_scripts =
  vaktaplan = vaktaplan:main

[bdist_wheel]
universal = True
